# secure_proxy_tunnel

./: README.md  metadata.json  package.json  server.ts
.github/workflows/: android.yml  ci.yml  release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/securetunnel/android/: HelpActivity.kt  LocalProxyService.kt  MainActivity.kt  TunnelConfig.kt  VpnModeService.kt
android/app/src/main/res/mipmap/: ic_launcher_round.xml
android/app/src/main/res/values/: strings.xml
secure_tunnel_project/: README.md  pyproject.toml
secure_tunnel_project/securetunnel/: __init__.py  common.py  local_proxy.py  remote_relay.py
secure_tunnel_project/tests/: test_interaction.py
src/: App.tsx  index.css  types.ts
src/components/: AndroidWorkspace.tsx  CodeViewer.tsx  ControlPanel.tsx  Header.tsx  PythonTestRunner.tsx  Terminal.tsx  TestConsole.tsx
