[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "securetunnel"
dynamic = ["version"]
authors = [
    { name = "Developer", email = "developer@example.com" }
]
description = "A lightweight secure TCP proxy tunnel and relay system using python asyncio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11, <3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
 ]
dependencies = []

[project.scripts]
securetunnel-local = "securetunnel.local_proxy:main"
securetunnel-relay = "securetunnel.remote_relay:main"

[tool.setuptools.dynamic]
version = {attr = "securetunnel.__version__"}
